--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0089.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0089.html
@@ -520,9 +520,14 @@
             <ins class="alt" title="nlp 1.00">δύναται</ins>
           </span>
         </span>
-        <span id="w_98" class="ocr_word" title="bbox 1688 927 1755 980">
+        <span id="w_98_0" class="ocr_word" title="bbox 1688 927 1755 980">
           <span class="alternatives">
-            <ins title="nlp 2.00">[τὸ μέγεθος]</ins>
+            <ins class="alt" title="nlp 2.00">[τὸ</ins>
+          </span>
+        </span>
+        <span id="w_98_1" class="ocr_word" title="bbox 1688 927 1755 980">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">μέγεθος]</ins>
           </span>
         </span>
         <span id="w_100" class="ocr_word" title="bbox 2016 945 2052 972">
@@ -771,8 +776,7 @@
         </span>
         <span id="w_145" class="ocr_word" title="bbox 2014 1302 2047 1330">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">jt</ins>
-            <del title="nlp 0.90">jt</del>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
@@ -1365,8 +1369,7 @@
         </span>
         <span id="w_259" class="ocr_word" title="bbox 1466 2149 1602 2189">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">atUem</ins>
-            <del title="nlp 0.90">atUem</del>
+            <ins title="nlp 2.00">autem</ins>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1632 2147 1680 2188">
@@ -1415,8 +1418,7 @@
         </span>
         <span id="w_267" class="ocr_word" title="bbox 736 2231 847 2260">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mtnc</ins>
-            <del title="nlp 0.90">mtnc</del>
+            <ins title="nlp 2.00">nunc</ins>
           </span>
         </span>
         <span id="w_268" class="ocr_word" title="bbox 876 2218 924 2260">
@@ -1637,9 +1639,14 @@
             <ins class="alt" title="nlp 1.00">βέλτιστε</ins>
           </span>
         </span>
-        <span id="w_308" class="ocr_word" title="bbox 470 2529 527 2534">
+        <span id="w_308_0" class="ocr_word" title="bbox 470 2529 527 2534">
           <span class="alternatives">
-            <ins title="nlp 2.00">—   —</ins>
+            <ins class="alt" title="nlp 2.00">—</ins>
+          </span>
+        </span>
+        <span id="w_308_1" class="ocr_word" title="bbox 470 2529 527 2534">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_310" class="ocr_word" title="bbox 649 2505 688 2547" lang="grc">
@@ -1714,9 +1721,14 @@
             <ins class="alt" title="nlp 1.00">πάλιν;</ins>
           </span>
         </span>
-        <span id="w_324" class="ocr_word" title="bbox 761 2601 816 2607">
+        <span id="w_324_0" class="ocr_word" title="bbox 761 2601 816 2607">
           <span class="alternatives">
-            <ins title="nlp 2.00">—   —</ins>
+            <ins class="alt" title="nlp 2.00">—</ins>
+          </span>
+        </span>
+        <span id="w_324_1" class="ocr_word" title="bbox 761 2601 816 2607">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_326" class="ocr_word" title="bbox 939 2575 1043 2619" lang="grc">
@@ -1785,8 +1797,7 @@
         </span>
         <span id="w_338" class="ocr_word" title="bbox 1189 2727 1413 2765">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">WeUmann.</ins>
-            <del title="nlp 0.90">WeUmann.</del>
+            <ins title="nlp 2.00">Wellmann.</ins>
           </span>
         </span>
         <span id="w_339" class="ocr_word" title="bbox 1512 2732 1532 2764">
@@ -1838,8 +1849,7 @@
         </span>
         <span id="w_347" class="ocr_word" title="bbox 768 2784 836 2819">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Vn</ins>
-            <del title="nlp 0.90">Vn</del>
+            <ins title="nlp 2.00">VII</ins>
           </span>
         </span>
         <span id="w_348" class="ocr_word" title="bbox 857 2787 934 2819">
@@ -2235,19 +2245,24 @@
             <ins class="alt" title="nlp 1.00">ψυχὴν</ins>
           </span>
         </span>
-        <span id="w_418_0" class="ocr_word" title="bbox 846 3104 1057 3156">
+        <span id="w_418_0_0" class="ocr_word" title="bbox 846 3104 1057 3156">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;#x003C;εἶ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;εἶ&amp;#x003E;να&amp;#x003C;ι&amp;#x003E;&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_418_1" class="ocr_word" title="bbox 846 3104 1057 3156">
+        <span id="w_418_0_1" class="ocr_word" title="bbox 846 3104 1057 3156">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">να</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_419_0" class="ocr_word" title="bbox 1084 3104 1294 3147">
+        <span id="w_418_1_0" class="ocr_word" title="bbox 846 3104 1057 3156">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;#x003C;ι&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;εἶ&amp;#x003E;να&amp;#x003C;ι&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_418_1_1" class="ocr_word" title="bbox 846 3104 1057 3156">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_419_1" class="ocr_word" title="bbox 1084 3104 1294 3147">
@@ -2255,30 +2270,14 @@
             <ins class="alt" title="nlp 2.00">δοξάζουσι·</ins>
           </span>
         </span>
-        <span id="w_420" class="ocr_word" title="bbox 1434 3104 1507 3154" lang="grc">
+        <span id="w_420_0" class="ocr_word" title="bbox 1434 3104 1507 3154">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;δέ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;δέ</ins>
           </span>
         </span>
-        <span id="w_421" class="ocr_word" title="bbox 1530 3119 1614 3143" lang="grc">
+        <span id="w_420_1" class="ocr_word" title="bbox 1434 3104 1507 3154">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τινα</ins>
-          </span>
-        </span>
-        <span id="w_422" class="ocr_word" title="bbox 1640 3104 1761 3153" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μέρη〉</ins>
-          </span>
-        </span>
-        <span id="w_423" class="ocr_word" title="bbox 1786 3118 1853 3148" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰς</ins>
-          </span>
-        </span>
-        <span id="w_424" class="ocr_word" title="bbox 1877 3106 1948 3143">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">etc</ins>
-            <del title="nlp 0.90">etc</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2302,8 +2301,7 @@
         </span>
         <span id="w_428" class="ocr_word" title="bbox 603 3160 847 3207">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TertuUiano,</ins>
-            <del title="nlp 0.90">TertuUiano,</del>
+            <ins title="nlp 2.00">Tertulliano,</ins>
           </span>
         </span>
         <span id="w_429" class="ocr_word" title="bbox 872 3160 963 3197">
