--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0090.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0090.html
@@ -749,8 +749,7 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 991 1148 1222 1192">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sensihilem</ins>
-            <del title="nlp 0.90">sensihilem</del>
+            <ins title="nlp 2.00">sensibilem</ins>
           </span>
         </span>
         <span id="w_138" class="ocr_word" title="bbox 1266 1150 1485 1202">
@@ -842,7 +841,7 @@
       <span class="ocr_line" title="bbox 296 1286 2090 1348">
         <span id="w_152" class="ocr_word" title="bbox 296 1307 329 1334">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">16</ins>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 470 1286 559 1331">
@@ -935,8 +934,7 @@
         </span>
         <span id="w_168" class="ocr_word" title="bbox 920 1361 972 1404">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ah</ins>
-            <del title="nlp 0.90">ah</del>
+            <ins title="nlp 2.00">ab</ins>
           </span>
         </span>
         <span id="w_169" class="ocr_word" title="bbox 1002 1363 1149 1416">
@@ -977,8 +975,7 @@
         </span>
         <span id="w_175" class="ocr_word" title="bbox 1933 1368 2091 1421">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quieias</ins>
-            <del title="nlp 0.90">quieias</del>
+            <ins title="nlp 2.00">quietas</ins>
           </span>
         </span>
       </span>
@@ -991,8 +988,7 @@
         </span>
         <span id="w_177" class="ocr_word" title="bbox 414 1430 665 1474">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ddedahiles</ins>
-            <del title="nlp 0.90">ddedahiles</del>
+            <ins title="nlp 2.00">delectabiles</ins>
           </span>
         </span>
         <span id="w_178" class="ocr_word" title="bbox 695 1431 868 1474">
@@ -1151,7 +1147,7 @@
       <span class="ocr_line" title="bbox 297 1646 2092 1708">
         <span id="w_203" class="ocr_word" title="bbox 297 1665 331 1690">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">30</ins>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 350 1647 518 1689">
@@ -1198,8 +1194,7 @@
         </span>
         <span id="w_211" class="ocr_word" title="bbox 1476 1652 1733 1705">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sapientihus</ins>
-            <del title="nlp 0.90">sapientihus</del>
+            <ins title="nlp 2.00">sapientibus</ins>
           </span>
         </span>
         <span id="w_212" class="ocr_word" title="bbox 1758 1652 1882 1695">
@@ -1381,8 +1376,7 @@
         </span>
         <span id="w_245" class="ocr_word" title="bbox 426 1933 587 1986">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">frudus</ins>
-            <del title="nlp 0.90">frudus</del>
+            <ins title="nlp 2.00">frictus</ins>
           </span>
         </span>
         <span id="w_246" class="ocr_word" title="bbox 605 1933 694 1974">
@@ -1491,7 +1485,7 @@
         </span>
         <span id="w_263" class="ocr_word" title="bbox 1403 2077 1444 2120">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_264" class="ocr_word" title="bbox 1464 2079 1491 2120">
@@ -2228,14 +2222,12 @@
         </span>
         <span id="w_401" class="ocr_word" title="bbox 1093 3048 1233 3086">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Bimilia</ins>
-            <del title="nlp 0.90">Bimilia</del>
+            <ins title="nlp 2.00">similia</ins>
           </span>
         </span>
         <span id="w_402" class="ocr_word" title="bbox 1259 3049 1439 3086">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">excidisBe</ins>
-            <del title="nlp 0.90">excidisBe</del>
+            <ins title="nlp 2.00">excidisse</ins>
           </span>
         </span>
         <span id="w_403" class="ocr_word" title="bbox 1465 3050 1562 3088">
@@ -2399,7 +2391,7 @@
         </span>
         <span id="w_430" class="ocr_word" title="bbox 1425 3157 1460 3192">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">11</ins>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_431" class="ocr_word" title="bbox 1484 3170 1518 3192">
