--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0091.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0091.html
@@ -66,8 +66,7 @@
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1461 279 1612 325">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Aëtius</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1644 280 1705 325">
@@ -247,13 +246,12 @@
       <span class="ocr_line" title="bbox 394 570 2055 639">
         <span id="w_44" class="ocr_word" title="bbox 394 570 486 614">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">160</ins>
+            <ins title="nlp 2.00">150</ins>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 518 571 669 615">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Aëtius</ins>
           </span>
         </span>
         <span id="w_46" class="ocr_word" title="bbox 701 572 762 615">
@@ -309,9 +307,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_56" class="ocr_word" title="bbox 1936 585 2018 639" lang="grc">
+        <span id="w_56_0" class="ocr_word" title="bbox 1936 585 2018 639">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ζήνωνος 5</ins>
+            <ins class="alt" title="nlp 2.00">Zήνωνος</ins>
+          </span>
+        </span>
+        <span id="w_56_1" class="ocr_word" title="bbox 1936 585 2018 639">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">5</ins>
           </span>
         </span>
       </span>
@@ -321,9 +324,14 @@
             <ins title="nlp 2.00">εἰρημένον,</ins>
           </span>
         </span>
-        <span id="w_59" class="ocr_word" title="bbox 722 661 746 688" lang="grc">
+        <span id="w_59_0" class="ocr_word" title="bbox 722 661 746 688">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἳ</ins>
+            <ins class="alt" title="nlp 2.00">ὅ</ins>
+          </span>
+        </span>
+        <span id="w_59_1" class="ocr_word" title="bbox 722 661 746 688">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_60" class="ocr_word" title="bbox 778 645 849 689" lang="grc">
@@ -354,11 +362,6 @@
         <span id="w_65" class="ocr_word" title="bbox 1678 653 1903 697" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">διατεῖνον</ins>
-          </span>
-        </span>
-        <span id="w_66" class="ocr_word" title="bbox 1934 654 2018 697" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
           </span>
         </span>
       </span>
@@ -417,7 +420,7 @@
       <span class="ocr_line" title="bbox 394 798 2018 865">
         <span id="w_77" class="ocr_word" title="bbox 394 798 481 842">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">161</ins>
+            <ins title="nlp 2.00">151</ins>
           </span>
         </span>
         <span id="w_78" class="ocr_word" title="bbox 519 798 705 843">
@@ -712,8 +715,7 @@
       <span class="ocr_line" title="bbox 286 1585 2069 1644">
         <span id="w_131" class="ocr_word" title="bbox 286 1585 401 1631">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">EKse</ins>
-            <del title="nlp 0.90">EKse</del>
+            <ins title="nlp 2.00">Εsse</ins>
           </span>
         </span>
         <span id="w_132" class="ocr_word" title="bbox 432 1587 559 1632">
@@ -729,8 +731,7 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 683 1585 907 1632">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Siimmus</ins>
-            <del title="nlp 0.90">Siimmus</del>
+            <ins title="nlp 2.00">Summus</ins>
           </span>
         </span>
         <span id="w_135" class="ocr_word" title="bbox 939 1587 1055 1631">
@@ -781,8 +782,7 @@
       <span class="ocr_line" title="bbox 414 1659 1872 1718">
         <span id="w_143" class="ocr_word" title="bbox 414 1659 574 1703">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">niulti.</ins>
-            <del title="nlp 0.90">niulti.</del>
+            <ins title="nlp 2.00">multi.</ins>
           </span>
         </span>
         <span id="w_144" class="ocr_word" title="bbox 616 1686 655 1690">
@@ -824,7 +824,7 @@
       <span class="ocr_line" title="bbox 388 1753 2017 1813">
         <span id="w_151" class="ocr_word" title="bbox 388 1754 478 1799">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">162</ins>
+            <ins title="nlp 2.00">152</ins>
           </span>
         </span>
         <span id="w_152" class="ocr_word" title="bbox 514 1756 669 1799">
@@ -890,7 +890,7 @@
         </span>
         <span id="w_163" class="ocr_word" title="bbox 460 1843 593 1882" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοὺς</ins>
+            <ins title="nlp 2.00">„τοὺς</ins>
           </span>
         </span>
         <span id="w_164" class="ocr_word" title="bbox 628 1832 766 1879" lang="grc">
@@ -1128,7 +1128,7 @@
         </span>
         <span id="w_207" class="ocr_word" title="bbox 470 2204 511 2230" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οἱ</ins>
+            <ins title="nlp 2.00">οἳ</ins>
           </span>
         </span>
         <span id="w_208" class="ocr_word" title="bbox 544 2186 765 2230" lang="grc">
@@ -1426,9 +1426,14 @@
             <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_265" class="ocr_word" title="bbox 567 2546 700 2600">
+        <span id="w_265_0" class="ocr_word" title="bbox 567 2546 700 2600">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τῆς&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τῆς&amp;#x003C;</ins>
+          </span>
+        </span>
+        <span id="w_265_1" class="ocr_word" title="bbox 567 2546 700 2600">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_266" class="ocr_word" title="bbox 732 2551 908 2601" lang="grc">
@@ -1441,16 +1446,11 @@
             <ins class="alt" title="nlp 1.00">μηδὲν</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 1110 2545 1339 2600" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εἰρηκότες.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 386 2613 2015 2673">
         <span id="w_269" class="ocr_word" title="bbox 386 2615 479 2660">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">164</ins>
+            <ins title="nlp 2.00">154</ins>
           </span>
         </span>
         <span id="w_270" class="ocr_word" title="bbox 513 2615 660 2660">
@@ -1539,8 +1539,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 613 2689 725 2731">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">didt</ins>
-            <del title="nlp 0.90">didt</del>
+            <ins title="nlp 2.00">dicit.</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 756 2713 805 2718">
@@ -1713,8 +1712,7 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1639 2828 1680 2872">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TL</ins>
-            <del title="nlp 0.90">TL</del>
+            <ins title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1708 2828 1803 2872">
@@ -1805,8 +1803,7 @@
         </span>
         <span id="w_330" class="ocr_word" title="bbox 435 2979 646 3031">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">regantwr.</ins>
-            <del title="nlp 0.90">regantwr.</del>
+            <ins title="nlp 2.00">regantur.</ins>
           </span>
         </span>
       </span>
@@ -1913,9 +1910,14 @@
             <ins class="alt" title="nlp 1.00">μορφῆς</ins>
           </span>
         </span>
-        <span id="w_350" class="ocr_word" title="bbox 1040 3163 1081 3200" lang="grc">
+        <span id="w_350_0" class="ocr_word" title="bbox 1040 3163 1081 3200">
           <span class="alternatives">
-            <ins title="nlp 2.00">εὶ</ins>
+            <ins class="alt" title="nlp 2.00">δὲ</ins>
+          </span>
+        </span>
+        <span id="w_350_1" class="ocr_word" title="bbox 1040 3163 1081 3200">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_351" class="ocr_word" title="bbox 1108 3163 1151 3210">
@@ -1926,14 +1928,7 @@
         </span>
         <span id="w_352" class="ocr_word" title="bbox 1175 3173 1266 3198">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">coiT.</ins>
-            <del title="nlp 0.90">coiT.</del>
-          </span>
-        </span>
-        <span id="w_353" class="ocr_word" title="bbox 1292 3162 1407 3199">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Diele.</ins>
-            <del title="nlp 0.90">Diele.</del>
+            <ins title="nlp 2.00">corr.</ins>
           </span>
         </span>
       </span>
