--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0092.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0092.html
@@ -36,8 +36,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 560 303 848 346">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TertuUianiis</ins>
-            <del title="nlp 0.90">TertuUianiis</del>
+            <ins title="nlp 2.00">Tertullianus</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 880 304 932 346">
@@ -83,22 +82,19 @@
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1644 321 1798 361">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">qtioqiie</ins>
-            <del title="nlp 0.90">qtioqiie</del>
+            <ins title="nlp 2.00">quoque</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1831 310 2046 351">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">maierinm</ins>
-            <del title="nlp 0.90">maierinm</del>
+            <ins title="nlp 2.00">materiam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 312 375 2050 432">
         <span id="w_14" class="ocr_word" title="bbox 312 375 567 417">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nnindialem</ins>
-            <del title="nlp 0.90">nnindialem</del>
+            <ins title="nlp 2.00">mundialem</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 600 389 628 417">
@@ -177,8 +173,7 @@
         </span>
         <span id="w_27" class="ocr_word" title="bbox 541 446 652 488">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">didt.</ins>
-            <del title="nlp 0.90">didt.</del>
+            <ins title="nlp 2.00">dicit.</ins>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 684 472 742 475">
@@ -382,13 +377,12 @@
       <span class="ocr_line" title="bbox 433 728 2050 790">
         <span id="w_62" class="ocr_word" title="bbox 433 728 522 772">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">167</ins>
+            <ins title="nlp 2.00">157</ins>
           </span>
         </span>
         <span id="w_63" class="ocr_word" title="bbox 557 728 708 773">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aetius</ins>
-            <del title="nlp 0.90">Aetius</del>
+            <ins title="nlp 2.00">Aëtius</ins>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 739 729 759 772">
@@ -564,7 +558,7 @@
       <span class="ocr_line" title="bbox 434 1013 2050 1075">
         <span id="w_95" class="ocr_word" title="bbox 434 1013 525 1058">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">168</ins>
+            <ins title="nlp 2.00">158</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 558 1014 818 1058">
@@ -1233,17 +1227,11 @@
         </span>
         <span id="w_223" class="ocr_word" title="bbox 1875 1877 2050 1930">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">disposi-</ins>
+            <ins title="nlp 2.00">dispositorem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 308 1945 2052 1999">
-        <span id="w_224" class="ocr_word" title="bbox 308 1947 434 1986">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">torem</ins>
-            <del title="nlp 0.90">dispositorem</del>
-          </span>
-        </span>
         <span id="w_225" class="ocr_word" title="bbox 471 1947 591 1998">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">atque</ins>
@@ -1378,8 +1366,7 @@
       <span class="ocr_line" title="bbox 307 2085 2052 2143">
         <span id="w_247" class="ocr_word" title="bbox 307 2085 371 2128">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rV</ins>
-            <del title="nlp 0.90">rV</del>
+            <ins title="nlp 2.00">IV</ins>
           </span>
         </span>
         <span id="w_248" class="ocr_word" title="bbox 391 2086 427 2127">
@@ -1394,8 +1381,7 @@
         </span>
         <span id="w_250" class="ocr_word" title="bbox 532 2085 706 2128">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TertuU.</ins>
-            <del title="nlp 0.90">TertuU.</del>
+            <ins title="nlp 2.00">Tertull.</ins>
           </span>
         </span>
         <span id="w_251" class="ocr_word" title="bbox 738 2085 863 2142">
@@ -1520,12 +1506,6 @@
             <del title="nlp 0.90">determinat</del>
           </span>
         </span>
-        <span id="w_271" class="ocr_word" title="bbox 867 2233 875 2238">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
-          </span>
-        </span>
         <span id="w_272" class="ocr_word" title="bbox 891 2231 1184 2283">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">factitatorem,</ins>
@@ -1558,17 +1538,11 @@
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1891 2232 2049 2284">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">forma-</ins>
+            <ins title="nlp 2.00">formaverit,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 308 2301 2049 2354">
-        <span id="w_278" class="ocr_word" title="bbox 308 2301 421 2352">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">verit,</ins>
-            <del title="nlp 0.90">formaverit,</del>
-          </span>
-        </span>
         <span id="w_279" class="ocr_word" title="bbox 453 2301 624 2343">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">eundem</ins>
@@ -1848,8 +1822,7 @@
         </span>
         <span id="w_325" class="ocr_word" title="bbox 1089 2586 1153 2630">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IH</ins>
-            <del title="nlp 0.90">IH</del>
+            <ins title="nlp 2.00">III</ins>
           </span>
         </span>
         <span id="w_326" class="ocr_word" title="bbox 1179 2587 1235 2629">
@@ -1961,8 +1934,7 @@
         </span>
         <span id="w_345" class="ocr_word" title="bbox 1397 2729 1633 2772">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">natwralem</ins>
-            <del title="nlp 0.90">natwralem</del>
+            <ins title="nlp 2.00">naturalem</ins>
           </span>
         </span>
         <span id="w_346" class="ocr_word" title="bbox 1682 2729 1807 2783">
@@ -2005,8 +1977,7 @@
         </span>
         <span id="w_352" class="ocr_word" title="bbox 897 2801 1073 2844">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dbtinere</ins>
-            <del title="nlp 0.90">dbtinere</del>
+            <ins title="nlp 2.00">obtinere</ins>
           </span>
         </span>
         <span id="w_353" class="ocr_word" title="bbox 1109 2805 1220 2844">
